--- a/lang/en.json
+++ b/lang/en.json
@@ -1,15 +1,18 @@
 {
-    "levels.settings.showTokensGM.name": "Show all Tokens for GM",
-    "levels.settings.showTokensGM.hint": "Show all the tokens regardless of the elevation for the GM",
-    "levels.settings.hideAllUnowned.name": "Hide all unowned tokens for Players",
-    "levels.settings.hideAllUnowned.hint": "Hide all unowned tokens for players when there is no token controlled",
+    "levels.modulename": "Levels",
+    "levels.settings.enableTooltips.name": "Enable Tooltips",
+    "levels.settings.enableTooltips.hint": "Show tooltips with top and bottom when hovering levels objects",
 
     "levels.tilecoonfig.rangeTop.name": "Height (Top)",
     "levels.tilecoonfig.rangeBottom.name": "Height (Bottom)",
     "levels.tilecoonfig.range.unit": "Elevation",
-    "levels.drawingconfig.hb.name": "Hole Bottom",
-    "levels.drawingconfig.ht.name": "Hole Top",
+    "levels.drawingconfig.hb.name": "Height (Bottom)",
+    "levels.drawingconfig.ht.name": "Height (Top)",
     "levels.drawingconfig.range.name": "Hole Range",
+    "levels.drawingconfig.isHole.name": "Levels Drawing Mode",
+    "levels.drawingconfig.isHole.opt0": "None",
+    "levels.drawingconfig.isHole.opt1": "Hole",
+    "levels.drawingconfig.isHole.opt2": "Stair",
 
     "levels.controls.main.name": "Levels",
     "levels.controls.levelsview.name": "Enable Levels View/Placement",
