--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,8 @@
     "levels.settings.enableTooltips.hint": "Show tooltips with top and bottom when hovering levels objects",
     "levels.settings.tokenElevScale.name": "Change token sized based on elevation",
     "levels.settings.tokenElevScale.hint": "Change size of tokens based on elevation of the controlled token",
+    "levels.settings.fogHiding.name": "EXPERIMENTAL: Advanced Fog of War",
+    "levels.settings.fogHiding.hint": "Hide unexplored floors from the explored fog of war",
 
     "levels.tilecoonfig.rangeTop.name": "Height (Top)",
     "levels.tilecoonfig.rangeBottom.name": "Height (Bottom)",
