--- a/lang/en.json
+++ b/lang/en.json
@@ -4,13 +4,13 @@
     "levels.settings.enableTooltips.hint": "Show tooltips with top and bottom when hovering levels objects",
     "levels.settings.tokenElevScale.name": "Change token sized based on elevation",
     "levels.settings.tokenElevScale.hint": "Change size of tokens based on elevation of the controlled token",
-    "levels.settings.fogHiding.name": "EXPERIMENTAL: Advanced Fog of War",
+    "levels.settings.fogHiding.name": "Advanced Fog of War",
     "levels.settings.fogHiding.hint": "Hide unexplored floors from the explored fog of war",
     "levels.settings.lockElevation.name": "Lock Elevation",
     "levels.settings.lockElevation.hint": "Prevent players from changing elevation from the token HUD. Keep in mind that if the player has permission to edit tokens they will be able to change it in the token config.",
     "levels.settings.defaultLosHeight.name": "Default Token Height",
     "levels.settings.defaultLosHeight.hint": "Height of a token (where the eyes of that creature are) in units. Default 6.",
-    "levels.settings.advancedLOS.name": "EXPERIMENTAL: Advanced Line of Sight",
+    "levels.settings.advancedLOS.name": "Advanced Line of Sight",
     "levels.settings.advancedLOS.hint": "Calculate sight in 3D space, uses the token height to do calculations.",
     "levels.settings.autoLOSHeight.name": "Automatic token height",
     "levels.settings.autoLOSHeight.hint": "Automatically calculate token height based on size and scale. Will ignore ALL manual settings. ",
