Current translation performed

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,28 +1,48 @@
 {
-    "levels.modulname": "Levels",
-    "levels.settings.enableTooltips.name": "Enable Tooltips",
+    "levels.modulename": "Levels",
+    "levels.settings.enableTooltips.name": "Tooltips einschalten",
     "levels.settings.enableTooltips.hint": "Tooltips mit Ober- und Unterseite anzeigen, wenn der Mauszeiger über Levels-Objekten schwebt",
     "levels.settings.tokenElevScale.name": "Token-Größe basierend auf der Höhe ändern",
-    "levels.settings.tokenElevScale.hint": "Größe des Tokens basierend auf der Höhe des kontrollierten Tokens ändern",
-    "levels.settings.fogHiding.name": "EXPERIMENTAL: Advanced Fog of War",
-    "levels.settings.fogHiding.hint": "Unerforschte Etagen vor dem erforschten Kriegsnebel ausblenden",
-    "levels.settings.lockElevation.name": "Lock Elevation",
-    "levels.settings.lockElevation.hint": "Verhindert, dass der Spieler die Höhe über das Token-HUD ändern kann. Denken Sie daran, dass der Spieler, wenn er die Berechtigung hat, Token zu bearbeiten, diese in der Token-Konfiguration ändern kann.",
-
-    "levels.tilecoonfig.rangeTop.name": "Höhe (Oben)",
+    "levels.settings.tokenElevScale.hint": "Größe der Token basierend auf der Elevation des kontrollierten Tokens ändern",
+    "levels.settings.fogHiding.name": "Erweiterte Kriegsnebel",
+    "levels.settings.fogHiding.hint": "Unerforschte Etagen vor dem erforschten Fog of War verstecken",
+    "levels.settings.lockElevation.name": "Sperre Aufzug",
+    "levels.settings.lockElevation.hint": "Verhindert, dass Spieler die Höhe über das Token-HUD ändern können. Denken Sie daran, dass der Spieler, wenn er die Berechtigung hat, Token zu bearbeiten, diese in der Token-Konfiguration ändern kann.",
+    "levels.settings.defaultLosHeight.name": "Standard-Token-Höhe",
+    "levels.settings.defaultLosHeight.hint": "Höhe eines Tokens (wo sich die Augen dieser Kreatur befinden) in Einheiten. Standardmäßig 6.",
+    "levels.settings.autoLOSHeight.name": "Automatische Token-Höhe",
+    "levels.settings.autoLOSHeight.hint": "Berechnet automatisch die Token-Höhe basierend auf Größe und Maßstab. Ignoriert die Standard Token-Höhe, aber pro Token-Einstellungen, die nicht auf 0 gesetzt sind, haben Vorrang vor der automatischen Berechnung. ",
+    "levels.settings.debugRaycast.name": "DEBUG: Strahlenvisualisierung einschalten",
+    "levels.settings.debugRaycast.hint": "Zeige die 3D-Sichtstrahlen (grün sichtbar, rot nicht sichtbar)",
+    "levels.settings.preciseLightOcclusion.name": "Experimentell: Präzise Lichtokklusion",
+    "levels.settings.preciseLightOcclusion.hint": "Entfernt Artefakte der Lichtokklusion auf Kosten der Leistung",
+    "levels.settings.preciseTokenVisibility.name": "Präzise Token-Sichtbarkeit",
+    "levels.settings.preciseTokenVisibility.hint": "Das Aktivieren dieser Option prüft auf Kosten einer gewissen Performance die Sichtbarkeit gegen die Ecken des Tokens zusätzlich zur Mitte",
+    "levels.settings.blockSightMovement.name": "Zaun",
+    "levels.settings.blockSightMovement.hint": "Wenn aktiviert, schränken Wände mit einer Höhe, die die Sicht nicht einschränkt, trotzdem die Bewegung ein",
+    
+    "levels.tilecoonfig.rangeTop.name": "Höhe (oben)",
     "levels.tilecoonfig.rangeBottom.name": "Höhe (Unten)",
+    "levels.tilecoonfig.showIfAbove.name": "Auch anzeigen, wenn unten?",
+    "levels.tilecoonfig.showAboveRange.name": "Max Elevation Difference", "levels.tilecoonfig.showAboveRange.name": "Maximale Höhendifferenz",
+    "levels.tilecoonfig.isBasement.name": "Ist Fundament?",
+    "levels.tilecoonfig.noFogHide.name": "Diese Kachel im Nebel nicht ausblenden",
     "levels.tilecoonfig.range.unit": "Aufzug",
     "levels.drawingconfig.hb.name": "Höhe (Unten)",
     "levels.drawingconfig.ht.name": "Höhe (Oben)",
-    "levels.drawingconfig.range.name": "Ganze Reichweite",
-    "levels.drawingconfig.elevatorFloors.name": "Aufzug Etagen",
-    "levels.drawingconfig.elevatorFloors.hint": "Definieren Sie Etagen als: elevation,name|elevation,name... - z.B. 0,Erdgeschoss|10,1. Stock...",
-    "levels.drawingconfig.isHole.name": "Etagen-Zeichnungsmodus",
+    "levels.drawingconfig.range.name": "Lochbereich",
+    "levels.drawingconfig.elevatorFloors.name": "Aufzug Floors",
+    "levels.drawingconfig.elevatorFloors.hint": "Definieren Sie Floors als: elevation,name|elevation,name... - z.B. 0,Ground Floor|10,First Floor...",
+    "levels.drawingconfig.isHole.name": "Ebenen-Zeichnungsmodus",
     "levels.drawingconfig.isHole.opt0": "Keine",
-    "levels.drawingconfig.isHole.opt1": "Hole",
+    "levels.drawingconfig.isHole.opt1": "Loch",
     "levels.drawingconfig.isHole.opt2": "Treppe",
     "levels.drawingconfig.isHole.opt3": "Aufzug",
     "levels.drawingHud.title": "Verriegelungszustand für Treppe umschalten",
+    "levels.tokenconfig.tokenHeight.name": "Token LOS Höhe",
+    "levels.tokenconfig.tokenHeight.unit": "(Entfernung)",
+    "levels.template.elevation.name": "Auf",
+    "levels.template.special.name": "Spezial",
 
     "levels.controls.main.name": "Levels",
     "levels.controls.levelsview.name": "Levels-Ansicht/Platzierung aktivieren",
@@ -32,16 +52,19 @@
     "levels.controls.levelsroof.name": "Ansicht/Platzierung der Leveldächer aktivieren",
     "levels.controls.levelshole.name": "Zeichnungen als Treppe platzieren, wenn aktiviert, als Löcher platzieren, wenn deaktiviert",
     "levels.controls.levelsclear.name": "Levels löschen",
+    "levels.controls.placeOverhead.name": "Wenn aktiviert, platziere Kacheln als Overhead-Kacheln 'innerhalb' von Levels",
+    "levels.controls.setTemplateElevation.name": "Höhe für nächste platzierte Vorlage setzen",
 
     "levels.dialog.levelsclear.title": "Levels löschen",
-    "levels.dialog.levelsclear.content": "Alle gespeicherten Levels löschen?",
+    "levels.dialog.levelsclear.content": "Alle gespeicherten Ebenen löschen?",
     "levels.dialog.define.warn": "Definieren Sie Ebenen als: unten,oben|unten,oben - z.B. 0,9|10,19|20,29",
     "levels.dialog.define.title": "Ebenen für diese Szene definieren",
-    "ebenen.dialog.definieren.text": "Ebenen: ",
+    "levels.dialog.define.text": "Ebenen: ",
     "levels.dialog.elevator.title": "Ebenen - Wählen Sie eine Etage",
+    "levels.dialog.elevation.title": "Elevation für nächste Vorlagenplatzierung festlegen",
 
     "levels.yesnodialog.yes": "Bestätigen",
-    "ebenen.yesnodialog.no": "Abbrechen",
+    "levels.yesnodialog.no": "Abbrechen",
 
     "levels.widget.title": "Levels",
     "levels.widget.element": "Level",
@@ -55,5 +78,7 @@
     "levels.form.suggestedLevels": "Vorgeschlagene Levels generieren",
     "levels.form.autoLevels": "Levels von Szene holen",
 
-    "levels.err.lessfog": "Levels: WARNUNG! Less Fog erkannt - die Token-Sichtbarkeit funktioniert nicht wie erwartet, bitte deaktivieren Sie eines der beiden Module."
+    "levels.err.lessfog": "Levels: WARNUNG! Less Fog erkannt - die Token-Sichtbarkeit funktioniert nicht wie erwartet, bitte deaktivieren Sie eines der beiden Module.",
+    "levels.firsttime.dialog": ""
+
 }
