--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,8 @@
     "levels.settings.enableTooltips.hint": "Show tooltips with top and bottom when hovering levels objects",
     "levels.settings.tokenElevScale.name": "Change token sized based on elevation",
     "levels.settings.tokenElevScale.hint": "Change size of tokens based on elevation of the controlled token",
+    "levels.settings.tokenElevScaleMultiSett.name":"Elevation scale custom multiplier",
+    "levels.settings.tokenElevScaleMultiSett.hint":"Multiply elevation scale by this number. A number larger than 1 will make tokens bigger while one smaller than 1 will make them smaller",
     "levels.settings.fogHiding.name": "Advanced Fog of War",
     "levels.settings.fogHiding.hint": "Hide unexplored floors from the explored fog of war",
     "levels.settings.lockElevation.name": "Lock Elevation",
