--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,9 @@
     "levels.settings.forceUiRefresh.name":"Force UI refresh",
     "levels.settings.forceUiRefresh.hint": "Forces more frequent refreshes of the levels UI at the cost of performance, if enabled may cause issues on specific systems (eg. PF2e)",
 
+    "levels.settings.stream-user-id.name": "Stream Player ID",
+    "levels.settings.stream-user-id.hint": "Matches Character Elevation to GM Elevation. WARNING (Best used with single GM).",
+
     "levels.tilecoonfig.rangeTop.name": "Height (Top)",
     "levels.tilecoonfig.rangeBottom.name": "Height (Bottom)",
     "levels.tilecoonfig.showIfAbove.name": "Show even when below?",
